redis2irc: Use asyncio/irc3/asyncio-redis

--- a/channels.yaml
+++ b/channels.yaml
@@ -1,4 +1,5 @@
 firehose-channel: '##legoktm-test'
+default-channel: '##legoktm-bots'
 channels:
-    '#wikimedia-operations':
-        - operations
+    '##legoktm-bots':
+        - foobarbaz
