--- a/channels.yaml
+++ b/channels.yaml
@@ -10,19 +10,17 @@ channels:
         - Pywikibot(-.*)?
         
     "#wikidata":
-#                x.get("X-Bugzilla-Product", None) in ["MediaWiki extensions"] and
-#                x.get("X-Bugzilla-Component", None) in
-#                    ["WikidataRepo", "WikidataClient"]
+        # x.get("X-Bugzilla-Product", None) in ["MediaWiki extensions"] and
+        # x.get("X-Bugzilla-Component", None) in ["WikidataRepo", "WikidataClient"]
         - MediaWiki_extensions-WikidataRepo
         - MediaWiki_extensions-WikidataClient
-#                x.get("X-Bugzilla-Product", None) in ["Wikimedia"] and
-#                x.get("X-Bugzilla-Component", None) in
-#                    ["Wikidata"]
+        # x.get("X-Bugzilla-Product", None) in ["Wikimedia"] and
+        # x.get("X-Bugzilla-Component", None) in ["Wikidata"]
         - Wikimedia-Wikidata
 
     "#wikimedia-corefeatures":
-#        lambda x: (x.get("X-Bugzilla-Product", None) == "MediaWiki extensions") and \
-#                  (x.get("X-Bugzilla-Component", None) in ["Echo", "Flow", "PageCuration", "Thanks", "WikiLove"]),
+        # x.get("X-Bugzilla-Product", None) == "MediaWiki extensions") and \
+        # x.get("X-Bugzilla-Component", None) in ["Echo", "Flow", "PageCuration", "Thanks", "WikiLove"]),
         - MediaWiki_extensions-Echo
         - MediaWiki_extensions-Flow
         - MediaWiki_extensions-PageCuration
@@ -30,70 +28,58 @@ channels:
         - MediaWiki_extensions-WikiLove
 
     "#mediawiki-i18n":
-        #lambda x: (x.get("X-Bugzilla-Component", None) in ["ContentTranslation"]),
+        # x.get("X-Bugzilla-Component", None) in ["ContentTranslation"]),
         - .*-ContentTranslation
         
     "#wikimedia-labs":
-        #lambda x: x.get("X-Bugzilla-Product", None) in ["Tool Labs tools", "Wikimedia Labs"] or \
-        #          (
-        #           (x.get("X-Bugzilla-Product", None) == "MediaWiki extensions") and \
-        #           (x.get("X-Bugzilla-Component", None) in ["OpenStackManager"])
-        #          ),
+        # x.get("X-Bugzilla-Product", None) in ["Tool Labs tools", "Wikimedia Labs"]
         - Tool_Labs_tools(-.*)?
         - Wikimedia_Labs(-.*)?
+        # x.get("X-Bugzilla-Product", None) == "MediaWiki extensions") and \
+        # x.get("X-Bugzilla-Component", None) in ["OpenStackManager"])
         - MediaWiki_extensions-OpenStackManager
     
     "#wikimedia-mobile":
-        # lambda x: x.get("X-Bugzilla-Product", None) in ["Wikimedia Mobile", "Commons App", "Wikipedia App", "MobileFrontend"],
+        # x.get("X-Bugzilla-Product", None) in ["Wikimedia Mobile", "Commons App", "Wikipedia App", "MobileFrontend"],
         - Wikimedia_Mobile(-.*)?
         - Commons_App(-.*)?
         - Wikipedia_App(-.*)?
         - MobileFrontend(-.*)?
         
     "#wikimedia-qa":
-        #lambda x: (
-        #              (x.get("X-Bugzilla-Product", None) == "Wikimedia") and \
-        #              (x.get("X-Bugzilla-Component", None) in ["Continuous integration", "Quality Assurance"])
-        #          ) or \
-        #          (
-        #              (x.get("X-Bugzilla-Product", None) == "Wikimedia Labs") and \
-        #              (x.get("X-Bugzilla-Component", None) == "deployment-prep (beta)")
-        #          ),
+        # x.get("X-Bugzilla-Product", None) == "Wikimedia") and \
+        # x.get("X-Bugzilla-Component", None) in ["Continuous integration", "Quality Assurance"])
         - Wikimedia-Continuous_integration
-        - Wikimedia-Quality_Assurance
-        - Wikimedia_Labs-deployment-prep_(beta) # not sure about this one
+        - Wikimedia-Quality_Assurance        
+        # x.get("X-Bugzilla-Product", None) == "Wikimedia Labs") and \
+        # x.get("X-Bugzilla-Component", None) == "deployment-prep (beta)")
+        - Wikimedia_Labs-deployment-prep_(beta) # FIXME: not sure about this one
 
     "#mediawiki-visualeditor":
-        #lambda x: x.get("X-Bugzilla-Product", None) in ["VisualEditor", "OOjs", "OOjs UI"] or \
+        # x.get("X-Bugzilla-Product", None) in ["VisualEditor", "OOjs", "OOjs UI"] or \
         - VisualEditor(-.*)?
         - OOjs(-.*)?
         - OOjs_UI(-.*)?
-        #          (
-        #              (x.get("X-Bugzilla-Product", None) == "MediaWiki extensions") and \
-        #              (x.get("X-Bugzilla-Component", None) in ["TemplateData", "Cite", "WikiEditor"])
-        #          ) or \
+        #  x.get("X-Bugzilla-Product", None) == "MediaWiki extensions") and \
+        #  x.get("X-Bugzilla-Component", None) in ["TemplateData", "Cite", "WikiEditor"])
         - MediaWiki_extensions-TemplateData
         - MediaWiki_extensions-Cite
         - MediaWiki_extensions-WikiEditor
-        #          (
-        #              (x.get("X-Bugzilla-Product", None) == "MediaWiki") and \
-        #              (x.get("X-Bugzilla-Component", None) in ["Page editing", "ResourceLoader"])
-        #          ),
+        #  x.get("X-Bugzilla-Product", None) == "MediaWiki") and \
+        #  x.get("X-Bugzilla-Component", None) in ["Page editing", "ResourceLoader"])
         - MediaWiki-Page_editing
         - MediaWiki-ResourceLoader
 
     "#mediawiki-parsoid":
-        #lambda x: x.get("X-Bugzilla-Product", None) in ["Parsoid"],
+        # x.get("X-Bugzilla-Product", None) in ["Parsoid"],
         - Parsoid(-.*)?
 
     "#wikimedia-multimedia":
-        #lambda x: \
-        #    (
-        #        x.get("X-Bugzilla-Product", None) in ["MediaWiki extensions"] and
-        #        x.get("X-Bugzilla-Component", None) in
-        #            ["UploadWizard", "TimedMediaHandler", "VipsScaler", "GlobalUsage", "MultimediaViewer", "GWToolset",
-        #             "Score", "PagedTiffHandler", "PdfHandler", "ImageMap", "CommonsMetadata", "OggHandler",
-        #             "ImageMetrics"]
+        #  x.get("X-Bugzilla-Product", None) in ["MediaWiki extensions"] and
+        #  x.get("X-Bugzilla-Component", None) in
+        #      ["UploadWizard", "TimedMediaHandler", "VipsScaler", "GlobalUsage", "MultimediaViewer", "GWToolset",
+        #       "Score", "PagedTiffHandler", "PdfHandler", "ImageMap", "CommonsMetadata", "OggHandler",
+        #       "ImageMetrics"]
         - MediaWiki_extensions-UploadWizard
         - MediaWiki_extensions-TimedMediaHandler
         - MediaWiki_extensions-VipsScaler
@@ -106,26 +92,25 @@ channels:
         - MediaWiki_extensions-ImageMap
         - MediaWiki_extensions-CommonsMetadata
         - MediaWiki_extensions-OggHandler
-            #   x.get("X-Bugzilla-Product", None) in ["MediaWiki"] and
-            #    x.get("X-Bugzilla-Component", None) in
-            #        ["File management", "Uploading"]
+        # x.get("X-Bugzilla-Product", None) in ["MediaWiki"] and
+        #  x.get("X-Bugzilla-Component", None) in ["File management", "Uploading"]
         - MediaWiki-File_management
         - MediaWiki-Uploading
         
     "#wikimedia-growth":
-        #   x.get("X-Bugzilla-Product", None) in ["MediaWiki extensions"] and
-        #   x.get("X-Bugzilla-Component", None) in ["GuidedTour", "GettingStarted"]
+        # x.get("X-Bugzilla-Product", None) in ["MediaWiki extensions"] and
+        # x.get("X-Bugzilla-Component", None) in ["GuidedTour", "GettingStarted"]
         - MediaWiki_extensions-GuidedTour
         - MediaWiki_extensions-GettingStarted
 
     "#wikimedia-analytics":
-        # lambda x: x.get("X-Bugzilla-Product", None) == "Analytics",
+        # x.get("X-Bugzilla-Product", None) == "Analytics",
         - Analytics(-.*)?
 
     # The following changes should ALWAYS be in #wikimedia-dev, even if the bugs
     # are also reported elsewhere.
     "#wikimedia-dev":
-        #lambda x: x.get("X-Bugzilla-Product", None) == "MediaWiki"
+        # x.get("X-Bugzilla-Product", None) == "MediaWiki"
         - MediaWiki(-.*)?
 
 firehose-channel: '#mediawiki-feed'
