Send MediaWiki-Core-Team to #mediawiki-core
Change-Id: I4ef37278bb18f41a6a0b537da7f25e534825ea26

--- a/channels.yaml
+++ b/channels.yaml
@@ -114,6 +114,9 @@ channels:
         - Code-Review
         - Gitblit-Deprecate
 
+    "#mediawiki-core":
+        - MediaWiki-Core-Team
+
     # The following changes should ALWAYS be in #wikimedia-dev, even if the bugs
     # are also reported elsewhere.
     "#wikimedia-dev":
