Renamed some phab projects, so renaming them here
Sorry for the noise.

Change-Id: I182729a8f2415328e1c40a1d0958782e6930bce1

--- a/channels.yaml
+++ b/channels.yaml
@@ -49,8 +49,8 @@ channels:
     "#wikimedia-qa":
         # x.get("X-Bugzilla-Product", None) == "Wikimedia") and \
         # x.get("X-Bugzilla-Component", None) in ["Continuous integration", "Quality Assurance"])
-        - Wikimedia-Continuous-integration
-        - Wikimedia-Quality-Assurance
+        - Continuous-integration
+        - Quality-Assurance
         # x.get("X-Bugzilla-Product", None) == "Wikimedia Labs") and \
         # x.get("X-Bugzilla-Component", None) == "deployment-prep (beta)")
         - Beta-Cluster
