Add #releng to #-qa
It's our team project.

Change-Id: Idefd52c8d830e54f96ce70ef47a42224b072883a

--- a/channels.yaml
+++ b/channels.yaml
@@ -54,6 +54,7 @@ channels:
         # x.get("X-Bugzilla-Product", None) == "Wikimedia Labs") and \
         # x.get("X-Bugzilla-Component", None) == "deployment-prep (beta)")
         - Beta-Cluster
+        - Release-Engineering
 
     "#mediawiki-visualeditor":
         # x.get("X-Bugzilla-Product", None) in ["VisualEditor", "OOjs", "OOjs UI"] or \
