Add test_channels_yaml.py to validate the channels.yaml file
This validates that the file is valid yaml as well as checking
that all the regular expressions compile properly.

Change-Id: I2af34c5c90cf25a71550487382ab2fff377226fd

--- a/tox.ini
+++ b/tox.ini
@@ -7,11 +7,15 @@ minversion = 1.6
 skipsdist = True
 
 # Environements to execute when invoking 'tox'
-envlist = flake8
+envlist = flake8,channels
 
 [testenv:flake8]
 commands = flake8
 deps = flake8
+
+[testenv:channels]
+commands = ./test_channels_yaml.py
+deps = PyYAML
 
 [flake8]
 exclude = .tox
