--- a/channels.yaml
+++ b/channels.yaml
@@ -34,7 +34,8 @@ channels:
 
     "#wikimedia-labs":
         # x.get("X-Bugzilla-Product", None) in ["Tool Labs tools", "Wikimedia Labs"]
-        - Tool-Labs-tools(-.*)?
+        - Tool-Labs(.*)?
+        - Labs-Team
         - Wikimedia-Labs(-.*)?
         # x.get("X-Bugzilla-Product", None) == "MediaWiki extensions") and \
         # x.get("X-Bugzilla-Component", None) in ["OpenStackManager"])
