Send User-Bd808-Test to /dev/null
It will still go to #mediawiki-feed though, just not -dev.

Change-Id: I288f8296a64e131a049fc5a3bf5d5d60ddfa44bc

--- a/channels.yaml
+++ b/channels.yaml
@@ -1,6 +1,10 @@
 channels:
     '##legoktm-bots':
         - foobarbaz
+
+    "/dev/null":
+        - User-Bd808-Test
+
     "#huggle":
 #        lambda x: x.get("X-Bugzilla-Product", None) == "Huggle",
         - Huggle(-.*)?
