tox.ini: Specify basepython = python3
See comments on I3fb8d1fd0c6a.

Change-Id: I84ae32b9fdf745111fbd0f83e80d181695253938

--- a/tox.ini
+++ b/tox.ini
@@ -12,10 +12,12 @@ envlist = flake8,channels
 [testenv:flake8]
 commands = flake8
 deps = flake8
+basepython = python3
 
 [testenv:channels]
 commands = ./test_channels_yaml.py
 deps = PyYAML
+basepython = python3
 
 [flake8]
 exclude = .tox
