Report IRC using Python and Yuvi's ircnotifier
Change-Id: I621fd38da3c2c96bff5a1a1494451c2a08e4cffc

--- a/config.json.example
+++ b/config.json.example
@@ -5,5 +5,6 @@
     "REDIS_HOST": "localhost",
     "REDIS_QUEUE_NAME": "wikibugs2",
     "IRC_SERVER": "irc.freenode.net",
-    "IRC_NICK": "wikibugs2"
+    "IRC_NICK": "wikibugs2",
+    "IRCNOTIFIER_KEY": "..."
 }
