Add #wikimedia-services reporting
Change-Id: Id73182d27ff715c1611dee76f5e87e788a0d7ef3

--- a/channels.yaml
+++ b/channels.yaml
@@ -82,6 +82,11 @@ channels:
         # x.get("X-Bugzilla-Product", None) in ["Parsoid"],
         - Parsoid(-.*)?
 
+    "#wikimedia-services":
+        - restbase(-.*)?
+        - services(-.*)?
+        - blocked-on-services
+
     "#wikimedia-multimedia":
         #  x.get("X-Bugzilla-Product", None) in ["MediaWiki extensions"] and
         #  x.get("X-Bugzilla-Component", None) in
