Send Spam-* to /dev/null
Bug: T84893
Change-Id: Idb2ca2d88d79d4a35da4bafbdb522ab27bc312c0

--- a/channels.yaml
+++ b/channels.yaml
@@ -4,6 +4,7 @@ channels:
 
     "/dev/null":
         - User-Bd808-Test
+        - Spam(-.*)?
 
     "#huggle":
 #        lambda x: x.get("X-Bugzilla-Product", None) == "Huggle",
