Move operations projects to #wikimedia-operations
Change-Id: Ie14cbfd6f5bf06291d885cf25cde815c6f42d3f0

--- a/channels.yaml
+++ b/channels.yaml
@@ -141,5 +141,10 @@ channels:
         # x.get("X-Bugzilla-Product", None) == "MediaWiki"
         - MediaWiki(-.*)?
 
+    "#wikimedia-operations":
+        - ops(-.*)?
+        - operations
+        - Blocked-on-Operations
+
 firehose-channel: '#mediawiki-feed'
 default-channel: '#wikimedia-dev'
