move ops-* to operations-feed channel
Change-Id: I56acbd446a14e48cb4f062f0c917bb1a47f862b2

--- a/channels.yaml
+++ b/channels.yaml
@@ -141,7 +141,7 @@ channels:
         # x.get("X-Bugzilla-Product", None) == "MediaWiki"
         - MediaWiki(-.*)?
 
-    "#wikimedia-operations":
+    "#wikimedia-operations-feed":
         - ops(-.*)?
         - operations
         - Blocked-on-Operations
