Add #wikidata umbrella to #wikidata
Change-Id: I3873950678dc57672ffdee750f5ddc2123da80cb

--- a/channels.yaml
+++ b/channels.yaml
@@ -15,6 +15,7 @@ channels:
         - Pywikibot(-.*)?
 
     "#wikidata":
+        - Wikidata
         # x.get("X-Bugzilla-Product", None) in ["MediaWiki extensions"] and
         # x.get("X-Bugzilla-Component", None) in ["WikidataRepo", "WikidataClient"]
         - MediaWiki-extensions-WikidataRepo
