Revert "move ops-* to operations-feed channel"
Per consensus on the ops@ list.

This reverts commit ecb8c785f30c0c9c589ce64e9b81742db3b56485.

Change-Id: I33aab5f81793919154c23c14bf88a5ac501606ca

--- a/channels.yaml
+++ b/channels.yaml
@@ -142,7 +142,7 @@ channels:
         # x.get("X-Bugzilla-Product", None) == "MediaWiki"
         - MediaWiki(-.*)?
 
-    "#wikimedia-operations-feed":
+    "#wikimedia-operations":
         - ops(-.*)?
         - operations
         - Blocked-on-Operations
