Duplicate -qa notifcations to -releng
The Releng team would like to unify the -devtools and -qa to a new
channel -releng.

* move the -devtools section next to -qa
* duplicate every project to -releng
* add two very basic acceptance tests to ensure the projects from each
  -qa and -devtools are both in -releng

Bug: T86053
Change-Id: I60bfb8098b6c5e6dbbb6480f73d190a91090e464

--- a/channels.yaml
+++ b/channels.yaml
@@ -58,13 +58,40 @@ channels:
         - MobileFrontend(-.*)?
         - Mobile-Web
 
+    "#wikimedia-devtools":
+        # teams
+        - Phabricator
+        # projects
+        - Wikibugs
+        - Phabricator.org
+        - Bugzilla-Migration
+        - Bugzilla-Preview
+        - RT-Migration
+        - Project-Management
+        - Code-Review
+        - Gitblit-Deprecate
+
     "#wikimedia-qa":
-        # x.get("X-Bugzilla-Product", None) == "Wikimedia") and \
-        # x.get("X-Bugzilla-Component", None) in ["Continuous integration", "Quality Assurance"])
         - Continuous-integration
         - Quality-Assurance
-        # x.get("X-Bugzilla-Product", None) == "Wikimedia Labs") and \
-        # x.get("X-Bugzilla-Component", None) == "deployment-prep (beta)")
+        - Beta-Cluster
+        - Release-Engineering
+
+    "#wikimedia-releng":
+        # wikimedia-devtools + wikimedia-qa
+        # teams
+        - Phabricator
+        # projects
+        - Wikibugs
+        - Phabricator.org
+        - Bugzilla-Migration
+        - Bugzilla-Preview
+        - RT-Migration
+        - Project-Management
+        - Code-Review
+        - Gitblit-Deprecate
+        - Continuous-integration
+        - Quality-Assurance
         - Beta-Cluster
         - Release-Engineering
 
@@ -105,19 +132,6 @@ channels:
 
     '#wikimedia-research':
         - Quarry
-
-    "#wikimedia-devtools":
-        # teams
-        - Phabricator
-        # projects
-        - Wikibugs
-        - Phabricator.org
-        - Bugzilla-Migration
-        - Bugzilla-Preview
-        - RT-Migration
-        - Project-Management
-        - Code-Review
-        - Gitblit-Deprecate
 
     "#mediawiki-core":
         - MediaWiki-Core-Team
