Include MobileWeb in #wikimedia-mobile
It's used by Mobile web.

Change-Id: I4ac265eb4652c40ea7b4ae7d75f4a9b031ac36dd

--- a/channels.yaml
+++ b/channels.yaml
@@ -54,6 +54,7 @@ channels:
         - Commons-App(-.*)?
         - Wikipedia-App(-.*)?
         - MobileFrontend(-.*)?
+        - Mobile-Web
 
     "#wikimedia-qa":
         # x.get("X-Bugzilla-Product", None) == "Wikimedia") and \
