Add Wikibugs to -labs
Change-Id: I12fbf413ccf5cee2fe76c23f739a3a010dc682c0

--- a/channels.yaml
+++ b/channels.yaml
@@ -46,6 +46,7 @@ channels:
         # x.get("X-Bugzilla-Component", None) in ["OpenStackManager"])
         - MediaWiki-extensions-OpenStackManager
         - Quarry
+        - Wikibugs
 
     "#wikimedia-mobile":
         # x.get("X-Bugzilla-Product", None) in ["Wikimedia Mobile", "Commons App", "Wikipedia App", "MobileFrontend"],
