Gerrit-Patch-Uploader to -labs
Change-Id: I395e584bd00fae04ec539ceff1aec7f6611c681b

--- a/channels.yaml
+++ b/channels.yaml
@@ -49,6 +49,7 @@ channels:
         - MediaWiki-extensions-OpenStackManager
         - Quarry
         - Wikibugs
+        - Gerrit-Patch-Uploader
 
     "#wikimedia-mobile":
         # x.get("X-Bugzilla-Product", None) in ["Wikimedia Mobile", "Commons App", "Wikipedia App", "MobileFrontend"],
