Cleanup the projects announced in -releng
Change-Id: Ic6b64ea169fba3684450d8056de8e8861c0192b1

--- a/channels.yaml
+++ b/channels.yaml
@@ -79,22 +79,15 @@ channels:
         - Release-Engineering
 
     "#wikimedia-releng":
-        # wikimedia-devtools + wikimedia-qa
         # teams
+        - Release-Engineering
         - Phabricator
         # projects
-        - Wikibugs
-        - Phabricator.org
-        - Bugzilla-Migration
-        - Bugzilla-Preview
-        - RT-Migration
-        - Project-Management
         - Code-Review
-        - Gitblit-Deprecate
         - Continuous-integration
         - Quality-Assurance
         - Beta-Cluster
-        - Release-Engineering
+        - Deployment-Systems
 
     "#mediawiki-visualeditor":
         # x.get("X-Bugzilla-Product", None) in ["VisualEditor", "OOjs", "OOjs UI"] or \
