LabsDB-Auditor -> labs
Change-Id: I0557a87cdff67211d9eb723708e6a8f57054af41

--- a/channels.yaml
+++ b/channels.yaml
@@ -50,6 +50,7 @@ channels:
         - Quarry
         - Wikibugs
         - Gerrit-Patch-Uploader
+        - LabsDB-Auditor
 
     "#wikimedia-mobile":
         # x.get("X-Bugzilla-Product", None) in ["Wikimedia Mobile", "Commons App", "Wikipedia App", "MobileFrontend"],
