--- a/channels.yaml
+++ b/channels.yaml
@@ -130,6 +130,8 @@ channels:
     "#wikimedia-dev":
         # x.get("X-Bugzilla-Product", None) == "MediaWiki"
         - MediaWiki(-.*)?
+        - Phabricator
+        - Phabricator.org
 
     "#wikimedia-operations":
         - ops(-.*)?
