--- a/channels.yaml
+++ b/channels.yaml
@@ -14,6 +14,9 @@ channels:
 #        lambda x: x.get("X-Bugzilla-Product", None) == "Pywikibot",
         - Pywikibot(-.*)?
 
+    "#wm-bot":
+        - WM-Bot
+
     "#wikidata":
         - Wikidata
         # x.get("X-Bugzilla-Product", None) in ["MediaWiki extensions"] and
