--- a/channels.yaml
+++ b/channels.yaml
@@ -136,5 +136,8 @@ channels:
         - operations
         - Blocked-on-Operations
 
+    "#wikimedia-teampractices":
+        - team-practices
+
 firehose-channel: '#mediawiki-feed'
 default-channel: '#wikimedia-dev'
