Send #puppet to -operations
Change-Id: I4dfcd70a32599ab1095bcf478f44efd9318828c1

--- a/channels.yaml
+++ b/channels.yaml
@@ -139,6 +139,7 @@ channels:
     "#wikimedia-operations":
         - ops(-.*)?
         - operations
+        - puppet
         - Blocked-on-Operations
 
     "#wikimedia-teampractices":
