Labs-Team was renamed to Labs
Change-Id: Ie2228951d708b53e17be952d44d5bc352124fab6

--- a/channels.yaml
+++ b/channels.yaml
@@ -45,7 +45,7 @@ channels:
     "#wikimedia-labs":
         # x.get("X-Bugzilla-Product", None) in ["Tool Labs tools", "Wikimedia Labs"]
         - Tool-Labs(.*)?
-        - Labs-Team
+        - Labs
         - Wikimedia-Labs(-.*)?
         # x.get("X-Bugzilla-Product", None) == "MediaWiki extensions") and \
         # x.get("X-Bugzilla-Component", None) in ["OpenStackManager"])
