Send fundraising stuff to our channel
Bug: T88071
Change-Id: Ica670359a29b6b451ca08ee7e0b35d855dee751a

--- a/channels.yaml
+++ b/channels.yaml
@@ -136,6 +136,9 @@ channels:
         - Phabricator
         - Phabricator.org
 
+    "#wikimedia-fundraising":
+        - Wikimedia-Fundraising
+
     "#wikimedia-operations":
         - ops(-.*)?
         - operations
