Send Blocked-on-MediaWiki-Core to #mediawiki-core
Change-Id: I92cdfb7491d3e48901249d2eeb523962a1585825

--- a/channels.yaml
+++ b/channels.yaml
@@ -106,6 +106,7 @@ channels:
 
     "#mediawiki-core":
         - MediaWiki-Core-Team
+        - Blocked-on-MediaWiki-Core
 
     # The following changes should ALWAYS be in #wikimedia-dev, even if the bugs
     # are also reported elsewhere.
