--- a/channels.yaml
+++ b/channels.yaml
@@ -72,6 +72,7 @@ channels:
         - Continuous-integration
         - Quality-Assurance
         - Beta-Cluster
+        - Staging
         - Deployment-Systems
 
     "#mediawiki-visualeditor":
