Add MoodBar to wikimedia-collaboration
Change-Id: I6539d5f16441ba535e849f5730d424f718016bea

--- a/channels.yaml
+++ b/channels.yaml
@@ -24,6 +24,7 @@ channels:
     "#wikimedia-collaboration":
         - Echo
         - Flow
+        - MoodBar
         - MediaWiki-extensions-PageCuration
         - Thanks
         - WikiLove
