Add § Fundraising.* to #wikimedia-fundraising
Bug: T88474
Change-Id: Ia2ef4d4cb5a9be76609778ca5fe49480841c0f6f

--- a/channels.yaml
+++ b/channels.yaml
@@ -117,6 +117,7 @@ channels:
 
     "#wikimedia-fundraising":
         - Wikimedia-Fundraising
+        - § Fundraising.* # workaround for T88747
 
     "#wikimedia-operations":
         - ops(-.*)?
