Send Wikibase stuff to #wikidata
Change-Id: I915fef0f5a9ae39168a337974bf06a3829f7d31e

--- a/channels.yaml
+++ b/channels.yaml
@@ -17,8 +17,9 @@ channels:
 
     "#wikidata":
         - Wikidata
-        - MediaWiki-extensions-WikidataRepository
-        - MediaWiki-extensions-WikidataClient
+        - Wikibase(-.*)?
+        - MediaWiki-extensions-WikibaseRepository
+        - MediaWiki-extensions-WikibaseClient
         - Wikimedia-Wikidata
 
     "#wikimedia-collaboration":
