Add Blocked-on-RelEng to -releng
Change-Id: I7a857abae2d600b796b1914b860a39a0c0345f7d

--- a/channels.yaml
+++ b/channels.yaml
@@ -68,6 +68,7 @@ channels:
     "#wikimedia-releng":
         # teams
         - Release-Engineering
+        - Blocked-on-RelEng
         # projects
         - Continuous-integration
         - Quality-Assurance
