Send AutoWikiBrowser to #autowikibrowser
Change-Id: I1e06f397b4fc23f0997b11fa917ff669f0049d88

--- a/channels.yaml
+++ b/channels.yaml
@@ -9,6 +9,9 @@ channels:
     "#huggle":
         - Huggle(-.*)?
 
+    "#autowikibrowser":
+        - AutoWikiBrowser
+
     "#pywikibot":
         - Pywikibot(-.*)?
 
