More fundraising projects to #wikimedia-fundraising
Change-Id: I97a58fe4ae3c29f625ef9a9d8232338b59c7e5bf

--- a/channels.yaml
+++ b/channels.yaml
@@ -119,7 +119,7 @@ channels:
         - Phabricator.org
 
     "#wikimedia-fundraising":
-        - Wikimedia-Fundraising
+        - Wikimedia-Fundraising(.*?)
         - § Fundraising.* # workaround for T88747
 
     "#wikimedia-operations":
