send WMT bugs to #wmt
Change-Id: Ida62717381a26af175b7d3dc758c96e9fc0f4423

--- a/channels.yaml
+++ b/channels.yaml
@@ -131,5 +131,8 @@ channels:
     "#wikimedia-teampractices":
         - team-practices
 
+    "#wmt":
+        - Tool-Labs-tools-WMT-bots
+
 firehose-channel: '#mediawiki-feed'
 default-channel: '#wikimedia-dev'
