--- a/tox.ini
+++ b/tox.ini
@@ -7,14 +7,14 @@ minversion = 1.6
 skipsdist = True
 
 # Environements to execute when invoking 'tox'
-envlist = flake8,channels
+envlist = flake8,py34
 
 [testenv:flake8]
 commands = flake8
 deps = flake8
 basepython = python3
 
-[testenv:channels]
+[testenv]
 commands = ./test_channels_yaml.py
 deps = PyYAML
 basepython = python3
