Add more projects for devtools and mobile
Change-Id: I5f0d75074847e40d240bd856ba5429e3f828a4e6

--- a/channels.yaml
+++ b/channels.yaml
@@ -54,10 +54,12 @@ channels:
         - Wikipedia-App(-.*)?
         - MobileFrontend(-.*)?
         - Mobile-Web
+        - Gather.*
 
     "#wikimedia-devtools":
         # teams
         - Phabricator
+        - Engineering-Community
         # projects
         - Wikibugs
         - Phabricator.org
@@ -67,6 +69,7 @@ channels:
         - Project-Management
         - Code-Review
         - Gitblit-Deprecate
+        - Project-Creators
 
     "#wikimedia-releng":
         # teams
