Send Commons to #wikimedia-commons-tech, per Steinsplitter
Change-Id: I1bfe20d577ac9e91f6eaba85465c82eb693748af

--- a/channels.yaml
+++ b/channels.yaml
@@ -117,6 +117,9 @@ channels:
         - MediaWiki-Core-Team
         - Blocked-on-MediaWiki-Core
 
+    "#wikimedia-commons-tech":
+        - Commons
+
     # The following changes should ALWAYS be in #wikimedia-dev, even if the bugs
     # are also reported elsewhere.
     "#wikimedia-dev":
