feed #wmt to new channel
Change-Id: Ie83699c69005ff185f442c82b37004fffcfe22c4

--- a/channels.yaml
+++ b/channels.yaml
@@ -145,7 +145,7 @@ channels:
     "#wikimedia-teampractices":
         - team-practices
 
-    "#wmt":
+    "##wmt":
         - Tool-Labs-tools-WMT-bots
 
     "#wikimedia-design":
