Correct Fundraising project tag regex
We need anything with "Fundraising" in it to show up on our channel.

Change-Id: Icaf68f307271929cea6197b6d6034be2f6dba621

--- a/channels.yaml
+++ b/channels.yaml
@@ -135,8 +135,7 @@ channels:
         - UI-Standardization
 
     "#wikimedia-fundraising":
-        - Wikimedia-Fundraising(.*?)
-        - § Fundraising.* # workaround for T88747
+        - .*Fundraising.*
 
     "#wikimedia-operations":
         - ops(-.*)?
