--- a/channels.yaml
+++ b/channels.yaml
@@ -83,6 +83,8 @@ channels:
         - Beta-Cluster
         - Staging
         - Deployment-Systems
+        - Browser-Tests
+        - Continuous-Integration-Isolation
 
     "#mediawiki-visualeditor":
         - VisualEditor(-.*)?
