Send MediaWiki-API-Team and Blocked-on-MediaWiki-API-Team to #mediawiki-core
Even though the latter doesn't exist yet, bd808 tells me that will be
the name when he gets around to completing that task.

Bug: T94471
Change-Id: I9b434256ebe6e6dc7c126a19cc399dcd7cd21463

--- a/channels.yaml
+++ b/channels.yaml
@@ -116,6 +116,8 @@ channels:
     "#mediawiki-core":
         - MediaWiki-Core-Team
         - Blocked-on-MediaWiki-Core
+        - MediaWiki-API-Team
+        - Blocked-on-MediaWiki-API-Team
 
     "#wikimedia-commons-tech":
         - Commons
