Update regex for Wikipedia apps
Change-Id: I9abc3c71c0b53350a8ab29a784744f73cca12a71

--- a/channels.yaml
+++ b/channels.yaml
@@ -53,7 +53,7 @@ channels:
     "#wikimedia-mobile":
         - Wikimedia-Mobile(-.*)?
         - Commons-App(-.*)?
-        - Wikipedia-App(-.*)?
+        - Wikipedia(-.*)?-App
         - MobileFrontend(-.*)?
         - Mobile-Web
         - Gather.*
