wmt: change tag name
Change-Id: I92b9360bf46c7cc3d49df8d8316ea71290bf5ff3

--- a/channels.yaml
+++ b/channels.yaml
@@ -148,7 +148,7 @@ channels:
         - team-practices
 
     "##wmt":
-        - Tool-Labs-tools-WMT-bots
+        - WMT-bots
 
     "#wikimedia-design":
         - Design
