Tools-Labs-xTools to #xtools
Change-Id: I87c746b46bb4a7c6191f759831d611e91f1ccb88

--- a/channels.yaml
+++ b/channels.yaml
@@ -157,5 +157,8 @@ channels:
         - WMF-Design-Research
         - UI-Standardization
 
+    "#xtools":
+        - Tool-Labs-xTools
+
 firehose-channel: '#mediawiki-feed'
 default-channel: '#wikimedia-dev'
