Add Blueprint skin to notify list for #wikimedia-design
Change-Id: I2d54eda3541c24b7ecd1d41e2fc761f7d8ee27e8

--- a/channels.yaml
+++ b/channels.yaml
@@ -156,6 +156,7 @@ channels:
         - WMF-Design
         - WMF-Design-Research
         - UI-Standardization
+        - mediawiki-skins-Blueprint
 
     "#xtools":
         - Tool-Labs-xTools
