channels: Continuous-Integration is now Continuous-Integration-Infrastructure
Currently ci-infra is now being sent to #wikimedia-dev instead
of #wikimedia-releng.

Bug: T96908
Change-Id: I734a894d37caa4200557eae069a536ff12705c3d

--- a/channels.yaml
+++ b/channels.yaml
@@ -78,7 +78,7 @@ channels:
         - Release-Engineering
         - Blocked-on-RelEng
         # projects
-        - Continuous-integration
+        - Continuous-Integration-Infrastructure
         - Beta-Cluster
         - Staging
         - Deployment-Systems
