Send Graph-VE MW extension project to VE channel
See T97847 for project creation

Change-Id: Ia404e12c101d91a8655f6f4e75b37e8e8785eda0

--- a/channels.yaml
+++ b/channels.yaml
@@ -84,6 +84,7 @@ channels:
         - Citoid
         - WikiEditor
         - UnicodeJS
+        - MediaWiki-extensions-Graph-VE
 
     "#wikimedia-editing":
         - Editing-Department
