Move ResourceLoader and Performance-Team #wikimedia-perf
Change-Id: I5105ba44c54dde1527bf02124e1ab6ad014e6a27

--- a/channels.yaml
+++ b/channels.yaml
@@ -98,9 +98,12 @@ channels:
         - Math
         - Mathoid
         - MediaWiki-Page-editing
-        - MediaWiki-ResourceLoader
         - Apex
         - Vector
+
+    "#wikimedia-perf":
+        - Performance-Team
+        - MediaWiki-ResourceLoader
 
     "#mediawiki-parsoid":
         - Parsoid(-.*)?
