Add 3 probjects to #wikimedia-de-tech
 - Phragile
 - Team-TCB
 - German-Community-Wishlist

Change-Id: I3f4d08866c08e83df8a5ecc24dd7b9b81ee69e41

--- a/channels.yaml
+++ b/channels.yaml
@@ -36,6 +36,11 @@ channels:
         - Thanks
         - WikiLove
 
+    "#wikimedia-de-tech":
+        - TCB-Team
+        - German-Community-Wishlist
+        - Phragile
+
     "#mediawiki-i18n":
         - .*-ContentTranslation
         - translatewiki\.net
