Change #wikidata to #wikidata-feed
We should try and merge and deply this at the same
time as all other patches and pulls linked in the
bug below

Bug: T102119
Change-Id: I543c79d1e882e6af213a2927c748f30e5037c881

--- a/channels.yaml
+++ b/channels.yaml
@@ -18,7 +18,7 @@ channels:
     "#wm-bot":
         - WM-Bot
 
-    "#wikidata":
+    "#wikidata-feed":
         - Wikidata
         - Wikibase(-.*)?
         - MediaWiki-extensions-WikibaseRepository
