xtools moved to wikimedia-xtools Change-Id: Ie84324e718d8025f4a1381f36d9ff5f4e9c5848d

--- a/channels.yaml
+++ b/channels.yaml
@@ -173,7 +173,7 @@ channels:
         - UI-Standardization
         - mediawiki-skins-Blueprint
 
-    "#xtools":
+    "#wikimedia-xtools":
         - Tool-Labs-xTools
 
 firehose-channel: '#mediawiki-feed'
