Filter WMDE- out of #wikimedia-fundraising
As far as I know, WMDE isn't hanging out there.  Maybe they should?

Change-Id: I0a0827bb8e44c73376e6dc9cab804d9ecdab6b6f

--- a/channels.yaml
+++ b/channels.yaml
@@ -151,7 +151,7 @@ channels:
         - UI-Standardization
 
     "#wikimedia-fundraising":
-        - .*Fundraising.*
+        - .*(?<!WMDE-)Fundraising.*
 
     "#wikimedia-operations":
         - ops(-.*)?
