Send GlobalRename changes to #wikimedia-rename
Bug: T107418
Change-Id: I6a163b0a5dbbb7d206c1bf5d2e78097a289cc7d5

--- a/channels.yaml
+++ b/channels.yaml
@@ -129,6 +129,9 @@ channels:
     '#wikimedia-research':
         - Quarry
 
+    '#wikimedia-rename':
+        - GlobalRename
+
     "#mediawiki-core":
         - MediaWiki-Core-Team
         - Blocked-on-MediaWiki-Core
