Send Collaboration-Team(-.*)? to #wikimedia-collaboration
Bug: T110186
Change-Id: I4890b75fc8163d182b3546fe88e7ed1182e117bd

--- a/channels.yaml
+++ b/channels.yaml
@@ -27,7 +27,7 @@ channels:
 
     "#wikimedia-collaboration":
         # teams
-        - Collaboration-Team
+        - Collaboration-Team(-.*)?
         # projects
         - Echo
         - Flow
