Send Community-Tech traffic to #wikimedia-commtech
Change-Id: I6e63425cf6a5a95d07019fed63c41570b0d09c88

--- a/channels.yaml
+++ b/channels.yaml
@@ -41,6 +41,9 @@ channels:
         - German-Community-Wishlist
         - Phragile
 
+    "#wikimedia-commtech":
+        - Community-Tech
+
     "#mediawiki-i18n":
         - .*-ContentTranslation
         - translatewiki\.net
