Deprecate gitblit, and migrate gerrit
Change-Id: Icfd5f7acb0bbecb986db3bce6cbd38062b5f03a1

--- a/channels.yaml
+++ b/channels.yaml
@@ -87,6 +87,8 @@ channels:
         - Deployment-Systems
         - Scap3
         - Browser-Tests
+        - Gitblit-Deprecate
+        - Gerrit-Migration
 
 
     "#mediawiki-visualeditor":
