Add #Differential for -releng
Change-Id: I6e0f312a35a106318049bbd5a4aeccd34eec94b6

--- a/channels.yaml
+++ b/channels.yaml
@@ -89,6 +89,7 @@ channels:
         - Browser-Tests
         - Gitblit-Deprecate
         - Gerrit-Migration
+        - Differential
 
 
     "#mediawiki-visualeditor":
