add notifs for #wikimedia-ios room
Change-Id: I8189b8fd21e3e8bfc99768def767b4149b8ae1a1

--- a/channels.yaml
+++ b/channels.yaml
@@ -189,5 +189,8 @@ channels:
     "#wikimedia-xtools":
         - Tool-Labs-xTools
 
+    "#wikimedia-ios":
+        - Wikipedia-iOS-.*
+
 firehose-channel: '#mediawiki-feed'
 default-channel: '#wikimedia-dev'
