Report ArticlePlaceholder to #wikidata-feed
Bug: T109927
Change-Id: I2f4b22f814e86b600cdd48707ed3f7d7ca43276b

--- a/channels.yaml
+++ b/channels.yaml
@@ -24,6 +24,7 @@ channels:
         - MediaWiki-extensions-WikibaseRepository
         - MediaWiki-extensions-WikibaseClient
         - Wikimedia-Wikidata
+        - ArticlePlaceholder
 
     "#wikimedia-collaboration":
         # teams
