Report Wikidata.org to #wikidata-feed
Bug: T109927
Change-Id: I34932e9f6cff1853bb1d25f3e73c9fc3c3923267

--- a/channels.yaml
+++ b/channels.yaml
@@ -25,6 +25,7 @@ channels:
         - MediaWiki-extensions-WikibaseClient
         - Wikimedia-Wikidata
         - ArticlePlaceholder
+        - Wikidata.org
 
     "#wikimedia-collaboration":
         # teams
