--- a/channels.yaml
+++ b/channels.yaml
@@ -70,6 +70,9 @@ channels:
         - Gitblit-Deprecate
         - Project-Creators
 
+    "#wikimedia-otrs":
+        - OTRS
+
     "#wikimedia-releng":
         # teams
         - Release-Engineering
