releng is now Release-Engineering-Team
Because we're a team, not a concept.

Change-Id: I4b6e83c5dda26161c2ac3af5f4e17dd29cb7496d

--- a/channels.yaml
+++ b/channels.yaml
@@ -75,7 +75,7 @@ channels:
 
     "#wikimedia-releng":
         # teams
-        - Release-Engineering
+        - Release-Engineering-Team
         - Blocked-on-RelEng
         - Releng-Admin
         # projects
